# cpp_mini_dictionary

./: CMakeLists.txt  Kamus.cpp  Kamus.h  Model.cpp  Model.h  main.cpp
operasi/: PenambahKata.cpp  PenambahKata.h  PenampilStruktur.cpp  PenampilStruktur.h  PenerjemahKalimat.cpp  PenerjemahKalimat.h  PenghapusKata.cpp  PenghapusKata.h  PengubahKata.cpp  PengubahKata.h
